fixed header flexbox alignment issue -added redBackground mixin style -added font style to entire body

--- a/src/css/_aui_custom.scss
+++ b/src/css/_aui_custom.scss
@@ -75,6 +75,14 @@ $title-font: "Circular";
 	color: #FFF;
 }
 
+@mixin redBackground() {
+	background: $nyred-color;
+	color: #FFF;
+	font-family: sans-serif;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+}
+
 @mixin textStyle($letter-spacing, $text-transform) {
 	letter-spacing: $letter-spacing;
 	text-transform: $text-transform;
